{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 16,
  "lineage": "a4517cfa-88fc-0b15-7338-97faf85e4d32",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.124.136.105",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-01-03T23:47:10.375-08:00",
            "id": "projects/qwiklabs-gcp-04-67362b9a8fe3/regions/asia-southeast1/addresses/terraform-nap-ip",
            "name": "terraform-nap-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "qwiklabs-gcp-04-67362b9a8fe3",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/regions/asia-southeast1/addresses/terraform-nap-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/zones/asia-southeast1-a/instanceGroups/terraform-vm-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 100,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-01-03T23:48:30.108-08:00",
            "enable_cdn": false,
            "fingerprint": "Ec4eOM5kVKc=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/healthChecks/terraform-healthcheck"
            ],
            "id": "projects/qwiklabs-gcp-04-67362b9a8fe3/global/backendServices/terraform-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "terraform-backend-service",
            "port_name": "http",
            "project": "qwiklabs-gcp-04-67362b9a8fe3",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/backendServices/terraform-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-03T23:47:20.659-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-67362b9a8fe3/global/firewalls/terraform-fw-allow-http",
            "log_config": [],
            "name": "terraform-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-67362b9a8fe3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/firewalls/terraform-fw-allow-http",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-03T23:47:20.338-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-67362b9a8fe3/global/firewalls/terraform-fw-allow-ssh",
            "log_config": [],
            "name": "terraform-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-67362b9a8fe3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/firewalls/terraform-fw-allow-ssh",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/qwiklabs-gcp-04-67362b9a8fe3/global/forwardingRules/terraform-global-forwarding-rule",
            "ip_address": "34.149.1.189",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "terraform-global-forwarding-rule",
            "port_range": "80",
            "project": "qwiklabs-gcp-04-67362b9a8fe3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/forwardingRules/terraform-global-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/targetHttpProxies/terraform-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1",
            "google_compute_target_http_proxy.target_http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/qwiklabs-gcp-04-67362b9a8fe3/global/networks/terraform-vpc",
            "mtu": 0,
            "name": "terraform-vpc",
            "project": "qwiklabs-gcp-04-67362b9a8fe3",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/networks/terraform-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-03T23:47:20.705-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/qwiklabs-gcp-04-67362b9a8fe3/regions/asia-southeast1/routers/terraform-nat-router",
            "name": "terraform-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/networks/terraform-vpc",
            "project": "qwiklabs-gcp-04-67362b9a8fe3",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/regions/asia-southeast1/routers/terraform-nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-04-67362b9a8fe3/asia-southeast1/terraform-nat-router/terraform-nat-gateway",
            "min_ports_per_vm": 0,
            "name": "terraform-nat-gateway",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/regions/asia-southeast1/addresses/terraform-nap-ip"
            ],
            "project": "qwiklabs-gcp-04-67362b9a8fe3",
            "router": "terraform-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat-ip",
            "google_compute_network.vpc",
            "google_compute_router.nat-router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-03T23:47:21.849-08:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/qwiklabs-gcp-04-67362b9a8fe3/regions/asia-southeast1/subnetworks/terraform-private-subnet-1",
            "ip_cidr_range": "10.10.1.0/29",
            "name": "terraform-private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/networks/terraform-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-67362b9a8fe3",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/regions/asia-southeast1/subnetworks/terraform-private-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-03T23:49:03.483-08:00",
            "id": "projects/qwiklabs-gcp-04-67362b9a8fe3/global/targetHttpProxies/terraform-proxy",
            "name": "terraform-proxy",
            "project": "qwiklabs-gcp-04-67362b9a8fe3",
            "proxy_bind": false,
            "proxy_id": 3016694846199842048,
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/targetHttpProxies/terraform-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/urlMaps/terraform-load-balancer"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-03T23:48:51.890-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/backendServices/terraform-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "AmDqILS2ZaE=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/qwiklabs-gcp-04-67362b9a8fe3/global/urlMaps/terraform-load-balancer",
            "map_id": 8983242591801591052,
            "name": "terraform-load-balancer",
            "path_matcher": [],
            "project": "qwiklabs-gcp-04-67362b9a8fe3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-67362b9a8fe3/global/urlMaps/terraform-load-balancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    }
  ]
}